package spengergasse.at.sj2425scherzerrabar.domain;

public record BookInLibraries (Book book, Integer borrowLengthDays) {
}
