package spengergasse.at.sj2425scherzerrabar.domain;

public enum BookType {
}
