package spengergasse.at.sj2425scherzerrabar.domain;

public class Person {
}
